add contacts map with clickable locations

--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
                 </div>
                 <h3>Галерея</h3>
                 <div class="image-placeholder">
+                    <img src="img/IMG_7510.JPG" alt="A man dancing" loading="lazy">
+                </div>
+                <div class="image-placeholder">
+                    <img src="img/IMG_7512.JPG" alt="A man dancing" loading="lazy">
+                </div>
+                <div class="image-placeholder">
                     <img src="img/IMG_7504.JPG" alt="A man dancing" loading="lazy">
-                </div>
-                <div class="image-placeholder">
-                    <img src="img/IMG_7506.JPG" alt="A man dancing" class="lazy-load" loading="lazy">
-                </div>
-                <div class="image-placeholder">
-                    <img src="img/IMG_7509.JPG" alt="A man dancing" class="lazy-load" loading="lazy">
                 </div>
             </div>
 
@@ -376,18 +376,21 @@
                 Свяжитесь с нами, чтобы узнать больше о расписании, ценах или записаться на пробное занятие.
             </p>
             <div class="contact-locations">
-                <div class="location-item">
-                    <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                        <img src="img/map-placeholder-1.jpg" alt="Map Placeholder 1" loading="lazy">
-                        <p>ул. Мележа 1, зал 308</p>
-                    </a>
+                <div class="image-placeholder">
+                    <img src="img/map.webp" alt="Map" usemap="#map-directions" loading="lazy">
+                    <map name="map-directions">
+                        <area target="_blank" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
+                            href="https://yandex.by/maps/?rtext=~ул.%20Матусевича%2C%2035г&rtt=auto" coords="7,4,174,54"
+                            shape="rect" data-original-coords="7,4,174,54">
+                        <area target="_blank" alt="пр-т Рокоссовского, 44к2" title="пр-т Рокоссовского, 44к2"
+                            href="https://yandex.by/maps/?rtext=~пр-т%20Рокоссовского%2C%2044к2&rtt=auto"
+                            coords="785,482,978,538" shape="rect" data-original-coords="785,482,978,538">
+                        <area target="_blank" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
+                            href="https://yandex.by/maps/?rtext=~ул.%20Тимирязева%2C%209к10&rtt=auto"
+                            coords="603,137,423,84" shape="rect" data-original-coords="603,137,423,84">
+                    </map>
                 </div>
-                <div class="location-item">
-                    <a href="https://yandex.by/maps/-/CDq75-fA" target="_blank">
-                        <img src="img/map-placeholder-2.jpg" alt="Map Placeholder 2" loading="lazy">
-                        <p>ул. Кальварийская, 17, зал 215</p>
-                    </a>
-                </div>
+                <h3>(Click the locations to get the route there)</h3>
             </div>
             <p>
                 <strong>Телефон:</strong> <a href="tel:+375291234567">+375 (29) 123-45-67</a>
