add gradients to section's backgrounds

--- a/index.html
+++ b/index.html
@@ -330,12 +330,9 @@
             <h2>О нас</h2>
             <div class="gallery-container">
                 <h3>Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</h3>
-                <div class="gallery-item">
-                    <iframe width="auto" height="500px"
-                        src="https://www.youtube.com/embed/4m6O2EXk2hE?si=ZgpkAuLwD4q6Ah2_" title="YouTube video player"
-                        frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-                <h3>Галерея</h3>
+                <iframe width="auto" height="500px" src="https://www.youtube.com/embed/4m6O2EXk2hE?si=ZgpkAuLwD4q6Ah2_"
+                    title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
                 <div class="image-placeholder">
                     <img src="img/IMG_7510.JPG" alt="A man dancing" loading="lazy">
                 </div>
