--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
     <main>
         <button class="floating-contact-button">
             <span class="contact-text">Связаться с нами</span>
+            <span class="contact-text-short">Связаться</span>
             <img class="contact-icon" src="img/contacts-display.svg" alt="Contact Icon">
             <ul class="contact-menu">
                 <li><a href="https://t.me/unknown" target="_blank"><img src="img/telegram.svg"
                             alt="Telegram Icon">Telegram</a></li>
                 <li><a href="viber://chat?number=YOUR_VIBER_NUMBER" target="_blank"><img src="img/viber.svg"
-                            alt="Viber Icon">Viber</a></li>
-                <li><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Call</a></li>
+                            alt="Viber Icon">Вайбер</a></li>
+                <li><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Телефон</a></li>
             </ul>
         </button>
 
@@ -67,9 +68,9 @@
             <div class="teacher-container">
                 <article class="teacher">
                     <div class="image-placeholder">
-                        <img src="img/teacher1.webp" alt="Teacher 1" loading="lazy">
+                        <img src="img/teacher1.webp" alt="Male teacher" loading="lazy">
                     </div>
-                    <div class="teacher-info">
+                    <div class="teacher-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
                         <p>Основатель школы</p>
                         <p>Образование: Национальная школа танца в Гаване по специальности: «Танцор современного танца
@@ -81,26 +82,20 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder">
-                        <img src="img/teacher2.webp" alt="Teacher 2" loading="lazy">
+                        <img src="img/teacher2.webp" alt="Female teacher" loading="lazy">
                     </div>
-                    <div class="teacher-info">
-                        <h3>Грейсьер Мачадо Лопес</h3>
-                        <p>Основатель школы</p>
-                        <p>Образование: Национальная школа танца в Гаване по специальности: «Танцор современного танца
-                            и
-                            фольклора». Участвовал в международных фестивалях в Италии, Франции, Венесуэле, Колумбии. 8
-                            лет
-                            преподавал в Китае.</p>
+                    <div class="teacher-info-2">
+                        <h3>Аньель Эррера Кастильо</h3>
+                        <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного и
+                            народного танца".</p>
                     </div>
                 </article>
             </div>
         </section>
 
         <section id="pricing" class="container-full">
-            <div class="pricing-info">
-                <h2>Стоимость</h2>
-                <p>Скидка 10% при первой покупке абонемента</p>
-            </div>
+            <h2>Стоимость</h2>
+            <h3>Пробное занятие бесплатно. При покупке абонемента в день пробного - скидка 10%.</h3>
             <div class="pricing-container">
                 <div class="pricing-card">
                     <h3 class="price">65,00 руб.</h3>
@@ -167,6 +162,7 @@
 
         <section id="schedule" class="container-full">
             <h2>Расписание</h2>
+            <h3>Пробный урок — отличная возможность выбрать свой стиль и начать танцевать.</h3>
             <div class="schedule-container">
                 <!-- Monday -->
                 <div class="schedule-card">
@@ -348,7 +344,7 @@
 
         <section id="qa" class="container-full">
             <h2>Вопросы</h2>
-            <ol>
+            <ul class="qa-container">
                 <li>
                     <h3>Как начать новичку?</h3>
                     <p>Выбирайте группы с нуля или для начинающих, в них не требуют специальной подготовки. Главное -
@@ -364,14 +360,29 @@
                     <p>В удобной, не стесняющей движения одежде и танцевальных туфлях или кроссовках. На латино микс
                         рекомендуем одевать леггинсы и кроссовки.</p>
                 </li>
-            </ol>
+            </ul>
         </section>
 
         <section id="contacts" class="container-full">
             <h2>Контакты</h2>
-            <p>
-                Свяжитесь с нами, чтобы узнать больше о расписании, ценах или записаться на пробное занятие.
-            </p>
+            <h3>Не стесняйтесь писать, звонить и посещать нас.
+                Мы действительно любим общаться с нашими клиентами.</h3>
+
+            <div class="social-media">
+                <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank"><img src="img/facebook.svg"
+                        alt="Facebook" loading="lazy"></a>
+                <a href="https://www.instagram.com/la_casa_de_grei/" target="_blank"><img src="img/instagram.svg"
+                        alt="instagram" loading="lazy"></a>
+                <a href="https://www.youtube.com/@lacasadegrei2151" target="_blank"><img src="img/youtube.svg"
+                        alt="instagram" loading="lazy"></a>
+            </div>
+
+            <h4>Три зала в Минске:</h4>
+            <ol>
+                <li>ул. Тимирязева, 9/10 (танцевальное пространство Эллада)</li>
+                <li>пр-т Рокоссовского, 44/2 (теннисный центр "Аква Минск")</li>
+                <li>ул. Матусевича, 35г (спортивный центр Sport Goat)</li>
+            </ol>
             <div class="contact-locations">
                 <div class="image-placeholder">
                     <img src="img/map.webp" alt="Map" usemap="#map-directions" loading="lazy">
@@ -384,10 +395,10 @@
                             coords="785,482,978,538" shape="rect" data-original-coords="785,482,978,538">
                         <area target="_blank" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
                             href="https://yandex.by/maps/?rtext=~ул.%20Тимирязева%2C%209к10&rtt=auto"
-                            coords="603,137,423,84" shape="rect" data-original-coords="603,137,423,84">
+                            coords="423,84,603,137" shape="rect" data-original-coords="423,84,603,137">
                     </map>
                 </div>
-                <h3>(Click the locations to get the route there)</h3>
+                <h5>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</h5>
             </div>
             <p>
                 <strong>Телефон:</strong> <a href="tel:+375291234567">+375 (29) 123-45-67</a>
