add logo to footer section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img class="contact-icon" src="img/contacts-display.svg" alt="Contact Icon">
             <ul class="contact-menu">
                 <li><a href="https://t.me/unknown" target="_blank"><img src="img/telegram.svg"
-                            alt="Telegram Icon">Telegram</a></li>
+                            alt="Telegram Icon">Телеграм</a></li>
                 <li><a href="viber://chat?number=YOUR_VIBER_NUMBER" target="_blank"><img src="img/viber.svg"
                             alt="Viber Icon">Вайбер</a></li>
                 <li><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Телефон</a></li>
@@ -410,7 +410,8 @@
 
     </main>
     <footer>
-        <div class="container">
+        <div class="copyright">
+            <a href="/"><img src="img/logo.svg" alt="LOGO"></a>
             <p>© La Casa de Grei</p>
         </div>
     </footer>
