remove tablet breakpoint and performance optimization

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </button>
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
-            data-bg-desktop="img/hero.jpg" data-bg-mobile="img/hero.jpg">
+            data-bg-desktop="img/home.webp" data-bg-mobile="img/home.webp">
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
                 <p>Школа латиноамериканских танцев</p>
@@ -69,7 +69,7 @@
             <div class="instructors-container">
                 <article class="instructor">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/instructor1.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+                        <img src="img/instructor-grei.webp" loading="lazy">
                     </div>
                     <div class="instructor-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
@@ -83,7 +83,7 @@
                 </article>
                 <article class="instructor">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/instructor2.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                        <img src="img/instructor-anel.webp" loading="lazy">
                     </div>
                     <div class="instructor-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
@@ -97,7 +97,8 @@
         <section id="pricing" class="container-full" role="group" aria-labelledby="pricing-heading">
             <h2>Стоимость</h2>
             <div class="pricing-container">
-                <p>Пробное занятие бесплатно.<br> При покупке абонемента в день пробного - скидка 10%.</p>
+                <p class="bigger-text">Пробное занятие бесплатно.<br> При покупке абонемента в день пробного - скидка
+                    10%.</p>
                 <div class="pricing-cards">
                     <div class="pricing-card">
                         <h3 class="price">65,00 руб.</h3>
@@ -158,13 +159,15 @@
                     <p>Безлимит 1 месяц в одном филиале <strong>150,00 руб.</strong></p>
                 </div>
                 <div class="payment-methods">
-                    <p>Оплата может быть произведена либо:</p>
+                    <p>Способы оплаты:</p>
                     <ul role="list">
-                        <li role="listitem">по месту проведения занятий</li>
-                        <li role="listitem">с помощью системы ERIP</li>
-                        <p>оплата > ЕРИП > Сервис E-POS > оплата тов.и услуг >
-                            лицевой счет: 28795-1-25 (сумму можно менять)</p>
+                        <li role="listitem">На месте проведения занятий</li>
+                        <li role="listitem">Банковский перевод на счет: <strong>BY97ALFA30132A17830030270000</strong>
+                        </li>
+                        <li role="listitem">Через ERIP (E-POS), лиц. счет: <strong>28795-1-25</strong></li>
                     </ul>
+                    <p class="smaller-text">Подробные инструкции по оплате через ERIP доступны в разделе <a href="#qa"
+                            id="qa-erip">"Вопросы и ответы"</a>.</p>
                 </div>
             </div>
         </section>
@@ -172,8 +175,9 @@
         <section id="calendar" class="container-full" role="group" aria-labelledby="calendar-heading">
             <h2>Расписание</h2>
             <div class="calendar-container">
-                <p>Пробный урок — отличная возможность выбрать свой стиль и начать танцевать.</p>
-                <p>Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть изменения.</p>
+                <p class="bigger-text">Пробный урок — отличная возможность выбрать свой стиль и начать танцевать.</p>
+                <p class="bigger-text">Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
+                    изменения.</p>
                 <!-- Monday -->
                 <div class="calendar-cards">
                     <div class="calendar-card">
@@ -337,25 +341,26 @@
         <section id="about" class="container-full" role="group" aria-labelledby="about-heading">
             <h2>О нас</h2>
             <div class="gallery-container">
-                <p>Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
+                <p class="bigger-text">Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
                 <iframe width="auto" height="500px"
                     aria-label="Участие в фестивале латиноамериканской культуры в Минске"
                     src="https://www.youtube.com/embed/4m6O2EXk2hE?si=ZgpkAuLwD4q6Ah2_" title="YouTube video player"
-                    frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                    loading="lazy"></iframe>
                 <div class="image-placeholder" aria-label="Группа танцующих людей" role="img">
-                    <img src="img/IMG_7510.JPG" alt="Группа танцующих людей" loading="lazy">
+                    <img src="img/group-dancing.webp" alt="Группа танцующих людей" loading="lazy">
                 </div>
                 <div class="image-placeholder" aria-label="Танцующая пара" role="img">
-                    <img src="img/IMG_7512.JPG" alt="Танцующая пара" loading="lazy">
+                    <img src="img/couple-dancing.webp" alt="Танцующая пара" loading="lazy">
                 </div>
                 <div class="image-placeholder" aria-label="Танцующий мужчина" role="img">
-                    <img src="img/IMG_7504.JPG" alt="Танцующий мужчина" loading="lazy">
+                    <img src="img/man-dancing.webp" alt="Танцующий мужчина" loading="lazy">
                 </div>
             </div>
         </section>
 
         <section id="qa" class="container-full" role="group" aria-labelledby="qa-heading">
-            <h2>Вопросы</h2>
+            <h2>Вопросы и ответы</h2>
             <ul class="qa-container" role="list">
                 <li role="listitem">
                     <h3>Как начать новичку?</h3>
@@ -371,6 +376,14 @@
                     <h3>В чем тренироваться?</h3>
                     <p>В удобной, не стесняющей движения одежде и танцевальных туфлях или кроссовках. На латино микс
                         рекомендуем одевать леггинсы и кроссовки.</p>
+                </li>
+                <li role="listitem">
+                    <h3>Как произвести платеж с помощью системы ERIP?</h3>
+                    <p>Для оплаты через систему ERIP, пожалуйста, следуйте этим шагам:</p>
+                    <p>
+                        оплата > ЕРИП > Сервис E-POS > оплата тов.и услуг >
+                        лицевой счет: <strong>28795-1-25</strong> (сумму можно менять)
+                    </p>
                 </li>
             </ul>
         </section>
@@ -426,19 +439,27 @@
 
     </main>
     <footer>
-        <div class="footer-info">
+        <div class="container-full">
             <div class="copyright">
-                <p>© 2025 La Casa de Grei. All rights reserved.</p>
-                <p>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank">ernvk23</a></p>
+                <p>© 2025 La Casa de Grei. Все права защищены.</p>
+                <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank">Edgar
+                            R.N</a></em></p>
                 <a href="/"><img src="img/logo.svg" alt="LOGO"></a>
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
-                <p>УНП: 193553191 Республика Беларусь</p>
+                <p>УНП: 193553191</p>
+                <p>Свидетельство о государственной регистрации от 28.05.2021, Республика Беларусь</p>
 
                 <p><strong>Реквизиты для оплаты:</strong></p>
-                <p>Расчетный счет: BY97ALFA30132A17830030270000 в BYN ЗАО «Альфа-Банк»</p>
-                <p>БИК: ALFABY2X</p>
+                <ul>
+                    <li>
+                        ERIP (E-POS), лицевой счет: 28795-1-25
+                    </li>
+                    <li>
+                        Расчетный счет: BY97ALFA30132A17830030270000 в BYN ЗАО «Альфа-Банк»<br>БИК: ALFABY2X
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
