replace map to better quality

--- a/index.html
+++ b/index.html
@@ -58,18 +58,19 @@
                 <p>Школа латиноамериканских танцев</p>
                 <p>У танца нет возраста. У танца есть душа и она всегда молода.</p>
             </div>
+            <div class="scroll-down">
+                <img src="img/scroll-down.svg" alt="Scroll down">
+                <p>Прокрутите вниз</p>
+            </div>
         </section>
-        <div class="scroll-down">
-            <img src="img/scroll-down.svg" alt="Scroll down">
-            <p>Прокрутите вниз</p>
-        </div>
+
 
         <section id="instructors" class="container-full" role="group" aria-labelledby="instructors-heading">
             <h2>Преподаватели</h2>
             <div class="instructors-container">
                 <article class="instructor">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/instructor-grei.webp" loading="lazy">
+                        <img src="img/instructor-grei.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
                     </div>
                     <div class="instructor-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
@@ -83,7 +84,7 @@
                 </article>
                 <article class="instructor">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/instructor-anel.webp" loading="lazy">
+                        <img src="img/instructor-anel.webp" alt="Инструктор по танцам Аньель" loading="lazy">
                     </div>
                     <div class="instructor-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
@@ -154,9 +155,9 @@
                     </div>
                 </div>
                 <div class="pricing-summary">
-                    <p>Пробное занятие <strong>0,00 руб.</strong></p>
-                    <p>Разовое занятие <strong>20,00 руб.</strong></p>
-                    <p>Безлимит 1 месяц в одном филиале <strong>150,00 руб.</strong></p>
+                    <p>Пробное занятие <span>0,00 руб.</span></p>
+                    <p>Разовое занятие <span>20,00 руб.</span></p>
+                    <p>Безлимит <strong>1 месяц</strong> в одном филиале <span>150,00 руб.</span></p>
                 </div>
                 <div class="payment-methods">
                     <p>Способы оплаты:</p>
@@ -342,8 +343,7 @@
             <h2>О нас</h2>
             <div class="gallery-container">
                 <p class="bigger-text">Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
-                <iframe width="auto" height="500px"
-                    aria-label="Участие в фестивале латиноамериканской культуры в Минске"
+                <iframe aria-label="Участие в фестивале латиноамериканской культуры в Минске"
                     src="https://www.youtube.com/embed/4m6O2EXk2hE?si=ZgpkAuLwD4q6Ah2_" title="YouTube video player"
                     frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
                     loading="lazy"></iframe>
@@ -392,7 +392,7 @@
             <h2>Контакты</h2>
 
             <div class="contacts-container">
-                <p>Не стесняйтесь писать, звонить и посещать нас.
+                <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас.
                     Мы действительно любим общаться с нашими клиентами.</p>
                 <p>
                     <strong>Телефон:</strong> <a href="tel:+375291234567">+375 (29) 123-45-67</a>
@@ -400,7 +400,6 @@
                 <p>
                     <strong>Email:</strong> <a href="mailto:info@lacasadegrei.by">info@lacasadegrei.by</a>
                 </p>
-                <p>Наши социальные сети</p>
                 <div class="social-media">
                     <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank"><img
                             src="img/facebook.svg" alt="Facebook" loading="lazy"></a>
@@ -423,13 +422,13 @@
                         <map name="map-directions">
                             <area target="_blank" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
                                 href="https://yandex.by/maps/?rtext=~ул.%20Матусевича%2C%2035г&rtt=auto"
-                                coords="7,4,174,54" shape="rect" data-original-coords="7,4,174,54">
+                                coords="142,85,385,184" shape="rect" data-original-coords="142,85,385,184">
                             <area target="_blank" alt="пр-т Рокоссовского, 44к2" title="пр-т Рокоссовского, 44к2"
                                 href="https://yandex.by/maps/?rtext=~пр-т%20Рокоссовского%2C%2044к2&rtt=auto"
-                                coords="785,482,978,538" shape="rect" data-original-coords="785,482,978,538">
+                                coords="1113,689,1385,797" shape="rect" data-original-coords="1113,689,1385,797">
                             <area target="_blank" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
                                 href="https://yandex.by/maps/?rtext=~ул.%20Тимирязева%2C%209к10&rtt=auto"
-                                coords="423,84,603,137" shape="rect" data-original-coords="423,84,603,137">
+                                coords="665,188,916,289" shape="rect" data-original-coords="665,188,916,289">
                         </map>
                     </div>
                     <p><em>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</em></p>
@@ -450,7 +449,6 @@
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
                 <p>УНП: 193553191</p>
                 <p>Свидетельство о государственной регистрации от 28.05.2021, Республика Беларусь</p>
-
                 <p><strong>Реквизиты для оплаты:</strong></p>
                 <ul>
                     <li>
