make sections scalling responsive

--- a/index.html
+++ b/index.html
@@ -53,20 +53,23 @@
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
             data-bg-desktop="img/home.webp" data-bg-mobile="img/home.webp">
+            <div class="spacer"></div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
                 <p>Школа латиноамериканских танцев</p>
                 <p>У танца нет возраста. У танца есть душа и она всегда молода.</p>
             </div>
+            <div class="spacer"></div>
             <div class="scroll-down">
                 <img src="img/scroll-down.svg" alt="Scroll down">
-                <p>Прокрутите вниз</p>
+                <p>Прокрутите<br>вниз</p>
             </div>
         </section>
 
 
         <section id="instructors" class="container-full" role="group" aria-labelledby="instructors-heading">
             <h2>Преподаватели</h2>
+            <div class="spacer"></div>
             <div class="instructors-container">
                 <article class="instructor">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
@@ -93,10 +96,12 @@
                     </div>
                 </article>
             </div>
+            <div class="spacer"></div>
         </section>
 
         <section id="pricing" class="container-full" role="group" aria-labelledby="pricing-heading">
             <h2>Стоимость</h2>
+            <div class="spacer"></div>
             <div class="pricing-container">
                 <p class="bigger-text">Пробное занятие бесплатно.<br> При покупке абонемента в день пробного - скидка
                     10%.</p>
@@ -171,13 +176,15 @@
                             id="qa-erip">"Вопросы и ответы"</a>.</p>
                 </div>
             </div>
+            <div class="spacer"></div>
         </section>
 
         <section id="calendar" class="container-full" role="group" aria-labelledby="calendar-heading">
             <h2>Расписание</h2>
+            <div class="spacer"></div>
             <div class="calendar-container">
-                <p class="bigger-text">Пробный урок — отличная возможность выбрать свой стиль и начать танцевать.</p>
-                <p class="bigger-text">Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
+                <p class="bigger-text">Пробный урок — отличная возможность выбрать свой стиль и начать
+                    танцевать.<br>Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
                     изменения.</p>
                 <!-- Monday -->
                 <div class="calendar-cards">
@@ -337,6 +344,7 @@
                     </div>
                 </div>
             </div>
+            <div class="spacer"></div>
         </section>
 
         <section id="about" class="container-full" role="group" aria-labelledby="about-heading">
@@ -361,6 +369,7 @@
 
         <section id="qa" class="container-full" role="group" aria-labelledby="qa-heading">
             <h2>Вопросы и ответы</h2>
+            <div class="spacer"></div>
             <ul class="qa-container" role="list">
                 <li role="listitem">
                     <h3>Как начать новичку?</h3>
@@ -386,11 +395,12 @@
                     </p>
                 </li>
             </ul>
+            <div class="spacer"></div>
         </section>
 
         <section id="contacts" class="container-full" role="group" aria-labelledby="contacts-heading">
             <h2>Контакты</h2>
-
+            <div class="spacer"></div>
             <div class="contacts-container">
                 <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас.
                     Мы действительно любим общаться с нашими клиентами.</p>
@@ -434,6 +444,7 @@
                     <p><em>(Нажмите на местоположение на карте, чтобы проложить туда маршрут)</em></p>
                 </div>
             </div>
+            <div class="spacer"></div>
         </section>
 
     </main>
