fix image positioning on different devices

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="img/logo.svg" alt="logo" class="logo">
             </a>
             <ul class="nav-links" role="list">
-                <li role="listitem"><a href="#instructors">Преподаватели</a></li>
+                <li role="listitem"><a href="#teachers">Преподаватели</a></li>
                 <li role="listitem"><a href="#pricing">Стоимость</a></li>
                 <li role="listitem"><a href="#calendar">Расписание</a></li>
                 <li role="listitem"><a href="#about">О Нас</a></li>
@@ -54,7 +54,7 @@
         </button>
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
-            data-bg-desktop="img/home.webp" data-bg-mobile="img/home.webp">
+            data-bg-desktop="img/home-desktop.webp" data-bg-mobile="img/home-mobile.webp">
             <div class="spacer"></div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
@@ -69,15 +69,15 @@
         </section>
 
 
-        <section id="instructors" class="container-full" role="group" aria-labelledby="instructors-heading">
+        <section id="teachers" class="container-full" role="group" aria-labelledby="teachers-heading">
             <h2>Преподаватели</h2>
             <div class="spacer"></div>
-            <div class="instructors-container">
-                <article class="instructor">
+            <div class="teachers-container">
+                <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/instructor-grei.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+                        <img src="img/teacher-grei.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
                     </div>
-                    <div class="instructor-info-1">
+                    <div class="teacher-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
                         <p>Основатель школы</p>
                         <p>Образование: Национальная школа танца в Гаване по специальности: «Танцор современного танца
@@ -87,11 +87,11 @@
                             преподавал в Китае.</p>
                     </div>
                 </article>
-                <article class="instructor">
+                <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/instructor-anel.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                        <img src="img/teacher-anel.webp" alt="Инструктор по танцам Аньель" loading="lazy">
                     </div>
-                    <div class="instructor-info-2">
+                    <div class="teacher-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
                         <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного и
                             народного танца".</p>
